fixed bug: during the mouseenter event, the div would flicker when hovering over dynamically added content inside the parent of the event, now there is the css property -> pointer-events: none to stop flickering

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
     position: relative;
     border-radius: 10px;
     transition: all 2s;
+
 }
 
 /* .book-cover-container:hover {
@@ -139,4 +140,8 @@
 
 .book-btn-container {
     height: 5rem;
+}
+
+.remove-events {
+    pointer-events: none;
 }
